cluster-a/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nf-a-namespace
  labels:
    istio-injection: enabled
