cluster-a/cross-cluster-serviceentry.yaml
# ServiceEntry: Route veramo-nf-b.nf-b-namespace to Cluster-B Gateway
# This allows NF-A to reach NF-B's Veramo sidecar via mTLS through Istio Gateways

apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: veramo-nf-b-external
  namespace: nf-a-namespace
spec:
  hosts:
  - veramo-nf-b.nf-b-namespace.svc.cluster.local
  addresses:
  - 240.0.0.3  # Virtual IP for routing
  ports:
  - number: 3001
    name: http-veramo
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 172.23.0.2  # Cluster-B control-plane IP (fixed)
    ports:
      http-veramo: 31696  # Cluster-B Ingress Gateway HTTP NodePort

---
# DestinationRule for mTLS to Cluster-B via veramo-nf-b hostname
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: veramo-nf-b-mtls
  namespace: nf-a-namespace
spec:
  host: veramo-nf-b.nf-b-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: MUTUAL
      credentialName: cluster-b-client-certs
      sni: cluster-b.external
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
