cluster-a/istio-messaging-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: veramo-messaging-vs
  namespace: nf-a-namespace
spec:
  hosts:
  - "*"
  gateways:
  - nf-a-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /messaging
    route:
    - destination:
        host: veramo-nf-a.nf-a-namespace.svc.cluster.local
        port:
          number: 7001
