cluster-a/istio-authz-policy-didcomm.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: veramo-nf-a-didcomm-policy
  namespace: nf-a-namespace
spec:
  selector:
    matchLabels:
      app: nf-a
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/nf-a-namespace/sa/default"
        - "cluster.local/ns/nf-b-namespace/sa/default"
    to:
    - operation:
        methods: ["POST", "GET"]
        paths: ["/didcomm*", "/veramo*"]
