cluster-a/istio-authz-policy-gateway.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: veramo-nf-a-gateway-policy
  namespace: nf-a-namespace
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: nf-a
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        methods: ["POST", "GET"]
        paths: ["/messaging*"]
